Fixed Wrapping classes Planes
added new classes to divs wrapping content in registration and login

--- a/frontend/src/assets/styles/login/login.css
+++ b/frontend/src/assets/styles/login/login.css
@@ -8,14 +8,14 @@ body {
     font-family: 'Open Sans';
 }
 
-.plane-parent {
+.plane-parent-login {
     flex-shrink: 0;
     min-height: 36rem;
     width: 100%;
     height: 100%;
 }
 
-.plane {
+.plane-login {
     flex-shrink: 0;
     min-height: 36rem;
 }
